# kart

./: .gitignore  build-debug.sh  build-release.sh  clean-bootstrap.sh  configure.sh  info
source/bootstrap/: CMakeLists.txt  main.cpp
source/bootstrap-cpp/: CMakeLists.txt  diagnostics.cpp  diagnostics.h  io.cpp  io.h  main.cpp
source/bootstrap-cpp/code_analysis/: ast.cpp  ast.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  type.h
source/bootstrap-cpp/syntax/: token.cpp  token.h  tokenizer.cpp  tokenizer.h
tests/cases/: tokenizer_test.kart
